# python-aristaproto

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE.md  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml  sonar-project.properties  upgrade.md
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  documentation.yml  release.yml
api/: index.html
aristaproto/: mkdocs.yml  pyproject.toml
aristaproto/docs/: api.md  descriptors.md  development.md  getting-started.md  index.md
aristaproto/docs/tutorial/: clients.md  messages.md
aristaproto/src/aristaproto/: __init__.py  _types.py  _version.py  casing.py  enum_.py  message_pool.py  nano_datetime.py  utils.py
aristaproto/src/aristaproto/grpcio/: __init__.py  grpcio_async_client.py  grpcio_async_server.py
aristaproto/src/aristaproto/grpclib/: __init__.py
aristaproto/src/aristaproto/validators/: proto_types.py
aristaproto/src/betterproto2/: __init__.py  _version.py  enum_.py  message_pool.py
aristaproto/src/betterproto2/grpclib/: grpclib_client.py  grpclib_server.py
aristaproto/src/betterproto2/validators/: __init__.py
aristaproto/tests/: README.md  mocks.py  oneof_pattern_matching.py  test_all_definition.py  test_any.py  test_casing.py  test_deprecated.py  test_documentation.py  test_encoding_decoding.py  test_enum.py  test_features.py  test_inputs.py  test_manual_validation.py  test_map.py  test_mapmessage.py  test_message_wraping.py  test_nano_datetime.py  test_nested.py  test_pickling.py  test_streams.py  test_struct.py  test_sync_client.py  test_timestamp.py  test_unwrap.py  test_validation.py  test_version_check.py  util.py
aristaproto/tests/conformance/: failing_tests.txt  main.py
aristaproto/tests/grpc/: async_channel.py  test_grpclib_client.py  test_grpclib_reflection.py  test_message_enum_descriptors.py  test_stream_stream.py  thing_service.py
aristaproto/tests/grpcio/: conftest.py  fixtures.py  test_grpcio_async_client.py  test_grpcio_async_server.py  test_grpcio_generated.py
aristaproto/tests/inputs/bool/: test_bool.py
aristaproto/tests/inputs/casing/: test_casing.py
aristaproto/tests/inputs/casing_inner_class/: test_casing_inner_class.py
aristaproto/tests/inputs/casing_message_field_uppercase/: casing_message_field_uppercase.py
aristaproto/tests/inputs/enum/: enum.json  test_enum.py
aristaproto/tests/inputs/example_service/: test_example_service.py
aristaproto/tests/inputs/google_impl_behavior_equivalence/: test_google_impl_behavior_equivalence.py
aristaproto/tests/inputs/googletypes_request/: test_googletypes_request.py
aristaproto/tests/inputs/googletypes_response/: test_googletypes_response.py
aristaproto/tests/inputs/googletypes_response_embedded/: test_googletypes_response_embedded.py
aristaproto/tests/inputs/import_service_input_message/: test_import_service_input_message.py
aristaproto/tests/inputs/invalid_field/: test_invalid_field.py
aristaproto/tests/inputs/nestedtwice/: test_nestedtwice.py
aristaproto/tests/inputs/oneof/: test_oneof.py
aristaproto/tests/inputs/oneof_default_value_serialization/: test_oneof_default_value_serialization.py
aristaproto/tests/inputs/oneof_enum/: test_oneof_enum.py
aristaproto/tests/inputs/proto3_field_presence/: test_proto3_field_presence.py
aristaproto/tests/inputs/proto3_field_presence_oneof/: test_proto3_field_presence_oneof.py
aristaproto/tests/inputs/regression_387/: test_regression_387.py
aristaproto/tests/inputs/regression_414/: test_regression_414.py
aristaproto/tests/inputs/repeated_duration_timestamp/: test_repeated_duration_timestamp.py
aristaproto/tests/inputs/rpc_empty_input_message/: test_rpc_empty_input_message.py
aristaproto/tests/inputs/service_uppercase/: test_service.py
aristaproto/tests/inputs/timestamp_dict_encode/: test_timestamp_dict_encode.py
aristaproto/tests/streams/java/src/main/java/betterproto/: CompatibilityTest.java
aristaproto_compiler/: pyproject.toml
aristaproto_compiler/src/aristaproto_compiler/: settings.py
aristaproto_compiler/src/betterproto2_compiler/: casing.py  settings.py
aristaproto_compiler/tests/: generate.py  test_casing.py  test_conditional_imports.py  test_grpcio_generated_outputs.py  test_known_type_imports.py  test_module_validation.py  test_settings.py  util.py
betterproto2/: pyproject.toml
betterproto2_compiler/: pyproject.toml
betterproto2_compiler/src/betterproto2_compiler/lib/google/protobuf/: __init__.py
betterproto2_compiler/src/betterproto2_compiler/lib/google/protobuf/compiler/: __init__.py
descriptors/: index.html
development/: index.html
getting-started/: index.html
search/: search_index.json
src/aristaproto/: __init__.py  _types.py  _version.py  enum.py  grpcio_client.py  grpcio_server.py
src/aristaproto/compile/: importing.py  naming.py
src/aristaproto/grpc/: grpclib_client.py  grpclib_server.py
src/aristaproto/plugin/: compiler.py  main.py  models.py  module_validation.py  parser.py  typing_compiler.py
src/aristaproto/templates/: header.py.j2  services_grpcio.py.j2  services_grpclib.py.j2  template.py.j2
tests/: README.md  conftest.py  generate.py  oneof_pattern_matching.py  test_all_definition.py  test_casing.py  test_deprecated.py  test_documentation.py  test_enum.py  test_features.py  test_get_ref_type.py  test_inputs.py  test_mapmessage.py  test_module_validation.py  test_pickling.py  test_streams.py  test_struct.py  test_timestamp.py  test_transport_dependencies.py  test_typing_compiler.py  test_version.py  util.py
tests/grpc/: test_grpclib_client.py  test_stream_stream.py  thing_service.py
tests/grpcio/: __init__.py  service_fixtures.py  test_grpcio_client.py  test_grpcio_generated.py  test_grpcio_server.py
tests/inputs/bool/: test_bool.py
tests/inputs/casing/: test_casing.py
tests/inputs/casing_inner_class/: casing_inner_class.proto  test_casing_inner_class.py
tests/inputs/casing_message_field_uppercase/: casing_message_field_uppercase.py
tests/inputs/enum/: test_enum.py
tutorial/clients/: index.html
tutorial/messages/: index.html
(+167 files in other folders)
