[project]
name = "aristaproto"
version = "0.1.5.dev0"
description = "Arista Protobuf / Python gRPC bindings generator & library"
authors = [
    { name = "Arista Networks", email = "ansible@arista.com" }
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["protobuf", "gRPC", "aristanetworks", "arista"]
license = { text = "MIT" }
dependencies = [
    "grpclib>=0.4.1,<0.5.0",
    "python-dateutil>=2.8,<3.0",
    "typing-extensions>=4.7.1,<5.0",
]

[project.urls]
Repository = "https://github.com/aristanetworks/python-aristaproto"

[project.scripts]
protoc-gen-python_aristaproto = "aristaproto.plugin:main"

[project.optional-dependencies]
compiler = [
    # The Ruff version is also set in .pre-commit-config.yaml
    "ruff>=0.11.11",
    "jinja2>=3.0.3",
]
rust-codec = [
    "betterproto-rust-codec==0.1.1",
]

[dependency-groups]
dev = [
    "asv>=0.4.2,<0.7.0",
    "bpython>=0.19,<0.27",
    "jinja2>=3.0.3",
    "mypy>=1.11.2,<2.0",
    "sphinx==7.4.7",
    "sphinx-rtd-theme==3.1.0",
    "pre-commit>=2.17,<5.0",
    "grpcio-tools>=1.54.2,<2.0",
    "tox>=4.22",
]
test = [
    "poethepoet>=0.9.0",
    "pytest>=7.3.2,<9.0.0",
    "pytest-asyncio>=0.23,<1.3",
    "pytest-cov>=2.9,<8.0",
    "pytest-mock>=3.12.0,<4.0",
    "pydantic>=2.0,<3",
    "protobuf>=4,<7",
    "cachelib>=0.10.2,<0.14.0",
    "tomlkit>=0.7.0",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.ruff]
extend-exclude = ["tests/output_*"]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-first-party = ["aristaproto", "tests"]

# Dev workflow tasks

[tool.poe.tasks.generate]
script = "tests.generate:main"
help = "Generate test cases (do this once before running test)"

[tool.poe.tasks.test]
cmd = "pytest"
help = "Run tests"

[tool.poe.tasks.types]
cmd  = "mypy src --ignore-missing-imports"
help = "Check types with mypy"

[tool.poe.tasks.format]
sequence = ["_format", "_sort-imports"]
help = "Format the source code, and sort the imports"

[tool.poe.tasks.check]
sequence = ["_check-format", "_check-imports"]
help = "Check that the source code is formatted and the imports sorted"

[tool.poe.tasks._format]
cmd = "ruff format src tests"
help = "Format the source code without sorting the imports"

[tool.poe.tasks._sort-imports]
cmd = "ruff check --select I --fix src tests"
help = "Sort the imports"

[tool.poe.tasks._check-format]
cmd = "ruff format --diff src tests"
help = "Check that the source code is formatted"

[tool.poe.tasks._check-imports]
cmd = "ruff check --select I src tests"
help = "Check that the imports are sorted"

[tool.poe.tasks.docs]
cmd  = "sphinx-build docs docs/build"
help = "Build the sphinx docs"

[tool.poe.tasks.bench]
shell = "asv run master^! && asv run HEAD^! && asv compare master HEAD"
help  = "Benchmark current commit vs. master branch"

[tool.poe.tasks.clean]
cmd  = """
rm -rf .asv .coverage .mypy_cache .pytest_cache
       dist aristaproto.egg-info **/__pycache__
       testsoutput_*
"""
help = "Clean out generated files from the workspace"

[tool.poe.tasks.generate_lib]
cmd = """
protoc
    --plugin=protoc-gen-custom=src/aristaproto/plugin/main.py
    --custom_opt=INCLUDE_GOOGLE
    --custom_out=src/aristaproto/lib/std
    -I /usr/local/include/
    /usr/local/include/google/protobuf/**/*.proto
"""
help = "Regenerate the types in aristaproto.lib.std.google"

# CI tasks

[tool.poe.tasks.full-test]
shell = "poe generate && tox"
help = "Run tests with multiple pythons"

[tool.doc8]
paths = ["docs"]
max_line_length = 88

[tool.doc8.ignore_path_errors]
"docs/migrating.rst" = [
    "D001",  # contains table which is longer than 88 characters long
]

[tool.coverage.run]
omit = ["aristaproto/tests/*"]

[tool.tox]
legacy_tox_ini = """
[tox]
requires =
    tox>=4.22
env_list =
    py311
    py310

[testenv]
dependency_groups =
    test
commands =
    pytest {posargs: --cov aristaproto}
"""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
